# teleop_gesture_toolbox

./: .gitignore  CMakeLists(backup).txt  CMakeLists.txt  CoppeliaREADME.md  README.md  cartesian_impedance.py  environment.yml  installation-conda.sh  installation-journal.md  installation-old.md  installation.sh  package.xml  requirements.txt  setup.cfg  setup.py
action/: ActuateGripper.action  MoveToNamedPose.action  MoveToPose.action
archive/: LearnJournal  blendingTwoSignals.py  indxs.py  oldwrapper.py  prompold_trytorecognize  strangepythonbehavior.py
examples/: load_dataset.py
gesture_detector/: .gitignore  leap_motion_install.sh  package.xml  rs_sub.py  setup.cfg  setup.py
gesture_detector/gesture_detector/: __init__.py  gesture_detect.py  saved_models
gesture_detector/launch/: gesture_detect_launch.py  gesture_detect_mediapipe_launch.py
gesture_detector/saved_models/: DTW99.json  DTW99.npz  common_gestures.json  common_gestures.npz  directional_swipes.json  directional_swipes2.json  directional_swipes2.npz  network99.json
gesture_detector/tests/: test_dataloader.py  test_training.py
gesture_meaning/: package.xml  setup.cfg  setup.py
gesture_meaning/gesture_meaning/: gesture_meaning_service.py  gesture_names_call.py  get_gesture_meaning.py  one_to_one_mapping.py  service_caller.py
gesture_meaning/tests/: test_gestures_to_actions.py
gesture_msgs/: CMakeLists.txt  package.xml
gesture_msgs/msg/: DeicticSolution.msg  DetectionObservations.msg  DetectionSolution.msg  Frame.msg  Gestures.msg  HRICommand.msg  Hand.msg  Intent.msg  LeapGestures.msg
gesture_msgs/srv/: GestureToMeaning.srv  GetModelConfig.srv  SaveHandRecord.srv
gesture_sentence_maker/: package.xml  setup.cfg  setup.py  target_objects_getter.py  tmp_g2i.py
gesture_sentence_maker/gesture_sentence_maker/: __init__.py  aux_gestures.py  gesture_deictic_processor_standalone.py  gesture_processor.py  gesture_sentence_getter.py  hricommand_export.py  utils.py
gesture_sentence_maker/gesture_sentence_maker/segmentation_task/: deictic_segment.py  deictic_solutions_plot.py
gesture_sentence_maker/launch/: deictic_processor_launch.py  sentence_maker_launch.py
gesture_visualization/: index.html
include/coppelia_scenes/: scene_panda.ttt  scene_panda_franka_gripper.ttt
include/custom_settings/: application.yaml  gesture_config.yaml  gesture_recording.yaml  gestures.yaml  main_config.yaml  paths.yaml  poses.yaml  recording.yaml  robot_move.yaml  scenes.yaml  scenes_archive.yaml
include/data/: download_sample.py
include/scripts/: coppelia_sim_install.sh  installation.sh  leap_motion_install.sh
launch/: backend.launch  backend_real.launch  backend_real_bt.launch  context_silent.launch  coppelia.launch  crow_gestures.launch  crow_gestures_nomain.launch  demo-1-22.launch  demo.launch  demopanda.launch  gesture_classification_launch.launch  leap.launch  main_coppelia.launch  onlymain.launch  simulator.launch
live_teleoperation/: robot.py  servoing.py  transform.py
msg/: Bone.msg  DetectionSolution.msg  Frame.msg  Hand.msg  LeapGestures.msg  Object.msg
panda_client_enhanced/: move_functions.py
pointing_object_selection/: deictic_panda.py  deitic_lib.py  package.xml  setup.cfg  setup.py  transform.py
pointing_object_selection/pointing_object_selection/: __init__.py  deictic_lib.py  deictic_node.py  interactive_deictic_node.py  pointing_object_getter.py  transform.py  transform_pub.py  transform_ros_getter.py
pointing_object_selection/tests/: pointing_experiment_selfcontined.py  scene_gen_test.py  test_deictic_lib.py
robotic_interface/: move_functions.py
rviz_config/: table.rviz  top.rviz  wall.rviz
scene_getter/: Scene.py  crow_scene_getter.py  package.xml  scene_getter.py  setup.cfg  setup.py
scene_getter/scene_getter/: Objects.py  Scene.py  __init__.py  crow_scene_getter.py  scene_getter.py  scene_getting.py  scene_marker_pub.py
scene_getter/scene_getter/scene_lib/: scene.py  scene_object.py  utils.py
scene_getter/scene_getter/scene_makers/: mocked_scene_maker.py  robothon_scene_maker.py  tiago_scene_maker.py  zmq_gdrnet_publisher.py
scene_getter/scene_getter/scene_makers/scenes/: scene_1.yaml  scene_template.yaml
scene_getter/tests/: test_add_sample_scene.py
scene_msgs/: CMakeLists.txt  package.xml
scene_msgs/msg/: GDRNObject.msg  GDRNSolution.msg  Scene.msg  SceneObject.msg
script/: leap_backend_run.sh
src/: apply_scene_service.py  confusion_matrix_pretty_print.py  coppelia_publisher.py  coppelia_sim.py  coppelia_sim_ros_interface.py  coppelia_test.py  environment.yml  gestures_lib.py  iiwa_fk.py  joint_controller.py  kinematics_interface.py  leapmotionlistener.py  listener.py  main.py  main2.py  main_coppelia.py  main_plot.py  main_record.py  main_swift.py  markers_publisher.py  moveit_lib.py  promp_lib.py  promp_lib2.py  py3_utils.py  settings.py  testkdlparser.py  trajectory_action_client.py  ui_lib.py  visualizer_lib.py
src/control/: joint_controller_toppra.py  node.py  ruckig_controller.py  ruckig_controller_optimization.py  run.py  utils.py
src/inverse_kinematics/: ik_lib.py
src/leapmotion/: Sample  Sample.cpp  frame_lib.py  hand_classes.cpp  hand_classes.h  hand_classes.py  leap.py  listener_depositor.cpp  listener_depositor.py  utils.cpp
src/learning/: dynamic_sample_thread.py  gesture_computation.py  get_info_about_network.py  how_to_use.py  import_data.py  main_sample_thread.py  notebook_and_plots.py  plots.py  pymc3_sample.py  pymc3_train.py  pymc_1.py  pymc_2.py  pymc_3.py  sample.py  (+6 more)
srv/: AddMesh.srv  AddObject.srv  ChangeNetwork.srv  FindObjects.srv  GetSyncedImages.srv  GripperControl.srv  RemoveObject.srv  SaveHandRecord.srv
teleop_gesture_toolbox/: deitic_example.py  dir_point_example.py  example_deictic.py  example_gestures_only.py  example_gestures_only_small.py  example_grec.py  gestures_detect_node.py  gestures_detect_node_small.py  main.py  main_coppelia.py  main_cvww.py  main_iros23.py  main_iros23_oar.py  main_thread.py  main_workshop_demo.py
tests/: test_pytest_discovery.py  test_static_load_nodep.py  test_static_train.py
(+145 files in other folders)
