<?xml version="1.0"?>
<package format="3">
  <name>scene_getter</name>
  <version>1.0.0</version>
  <description>Method to get scene definition.</description>
  <maintainer email="petr.vanc@cvut.cz">Petr Vanc</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

